# ucentral-cli

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: gcc_analyze.cmake
